# cheatsheet-cli

./: Cargo.toml  README.md
src/: add.rs  cli.rs  config.rs  error.rs  get.rs  main.rs  remove.rs  show.rs  web_sync.rs
src/cli/: add.rs  get.rs  remove.rs  run.rs  show.rs  update.rs  web_sync.rs
