[package]
name = "clic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
dirs = "5.0.1"
prettytable-rs = "0.10.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "1.0.60"
rand = "0.9.0-alpha.1"
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1.37.0", features = ["full"] }
clap  = { version = "4.5.4", features = ["suggestions", "color", "derive", "wrap_help", "cargo"] }
serde_json = "1.0.117"
cli-clipboard = "0.4.0"



